--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Node.js Deploy
+name: Bun Vite Deploy
 
 on:
   push:
@@ -8,7 +8,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Copy repository contents via scp
       uses: appleboy/scp-action@master
       with:
@@ -23,6 +23,9 @@ jobs:
     needs: deploy
     runs-on: ubuntu-latest
     steps:
+    - name: Set Bun PATH
+      run: |
+        echo "/home/${{ secrets.SSH_USER }}/.bun/bin" >> $GITHUB_PATH
     - name: Building Laravel Site
       uses: appleboy/ssh-action@master
       with:
@@ -33,7 +36,8 @@ jobs:
         script: |
           cd ${{ secrets.PROJECT_PATH }}
           git pull origin main
-          [ -f .env ] || cp .env.example .env
-          pnpm install
-          pnpm install --only=prod
-          pm2 restart app
+          [ -f .env ] || cp .env.prod .env
+          bun install
+          bun run build
+
+          
