🤖 Alterações:  M index.html

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "bun x --bun vite",
+    "dev": "bun x vite",
     "oldbuild": "vue-tsc && vite build",
     "build": "bun x vite build",
     "preview": "vite preview"
