--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "bun x vite",
+    "dev": "bunx --bun vite",
     "oldbuild": "vue-tsc && vite build",
     "build": "bun x vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vonojs/vono": "^0.0.18",
     "bootstrap": "^5.3.3",
-    "vue": "^3.4.19"
+    "hono": "^4.0.7",
+    "vue": "^3.4.19",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
