--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 VITE_APP_NAME=CardNames
 VITE_APP_DESC=A board game
 VITE_APP_URL="http://localhost:5173"
+DB_URL=./drizzle/sqlite.db
+DB_CONN_STRING=file:./drizzle/sqlite.db
+#DB_URL=./drizzle/sqlite.db
