--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "~/*": ["./node_modules/*"]
+      "~/*": ["./node_modules/*"],
+      "_/*": ["./*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
