--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Copy repository contents via scp
       uses: appleboy/scp-action@master
       with:
@@ -26,7 +26,7 @@ jobs:
     - name: Set Bun PATH
       run: |
         echo "/home/${{ secrets.SSH_USER }}/.bun/bin" >> $GITHUB_PATH
-    - name: Building Laravel Site
+    - name: Building Bun.js Site
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
